# KPI-comp-vision-lab1

./: .gitignore  CMakeLists.txt  README.md
App/: CMakeLists.txt
App/Source/: app.cpp
CVLib/: CMakeLists.txt
CVLib/Source/: CVTest.cpp  CVTest.hpp  SCompVision.cpp  SCompVision.hpp  func.cpp  func.hpp
Scripts/: CleanProjectFiles.bat  GenProjectFiles.bat
